# jsonWorkflowToPython

./: .gitignore  README.md
data/: input.json
src/: README.md  main.py  test-request.py
sut_management/: README.md  pyproject.toml
sut_management/sut_management/: __init__.py  sutManager.py
sut_management/sut_management.egg-info/: PKG-INFO  SOURCES.txt
sut_management/sut_reservation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_management/: README.md
test_management/test_management/: __init__.py  resultsManager.py  testManager.py
test_management/test_management.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
